Dropped Mac release and added Java 8 release
- To address issues with Macs, the Mac release was dropped entirely, as the Java 8 release will be easier for Mac users to set up.